Prepare CI for JDK23, Fix GCCollector notifications